// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with failed rating prop 1`] = `
<DummyTranslation
  id=""
/>
`;

exports[`works with failed rating prop 2`] = `
<DummyTranslation
  id=""
/>
`;

exports[`works with rating prop 1`] = `
<DummyTranslation
  id="★★★"
/>
`;

exports[`works with rating prop 2`] = `
<DummyTranslation
  id="★★★★★★★★★★"
/>
`;
